--- a/homework/Day016_Image Augmentation_HW.ipynb
+++ b/homework/Day016_Image Augmentation_HW.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -183,12 +183,12 @@
     "test_datagen = ImageDataGenerator(rescale = 1./255)\n",
     "\n",
     "#將路徑給Generator，自動產生Label\n",
-    "training_set = train_datagen.flow_from_directory('train',\n",
+    "training_set = train_datagen.flow_from_directory('dogs-vs-cats/train',\n",
     "                                                 target_size = (64, 64),\n",
     "                                                 batch_size = 32,\n",
     "                                                 class_mode = 'categorical')\n",
     "\n",
-    "test_set = test_datagen.flow_from_directory('test1',\n",
+    "test_set = test_datagen.flow_from_directory('dogs-vs-cats/test1',\n",
     "                                            target_size = (64, 64),\n",
     "                                            batch_size = 32,\n",
     "                                            class_mode = 'categorical')\n",
